# rocm_smi_lib

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .update-clang-tidy.sh  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  License.txt  README.md  lychee.toml  package.txt  rocm_agent_enumerator  rocm_smi-backward-compat.cmake  rocm_smi-config-version.cmake.in  rocm_smi-config.cmake.in  rocminfo.cc
.azuredevops/: rocm-ci.yml
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: issue_report.yml
DEBIAN/: control  postinst  postinst.in  prerm  prerm.in
RPM/: post.in  postun.in  preun.in  rpm_post  rpm_postun
cmake_modules/: help_package.cmake  utils.cmake  version_util.sh
docs/: .gitignore  Doxyfile  README.md  c++_tutorials.rst  conf.py  index.md  index.rst  license.md  python_api.rst  python_usage.md  rsmi_doxygen.cfg
docs/.doxygen/: .gitignore  Doxyfile
docs/.sphinx/: _toc.yml  _toc.yml.in  requirements.in  requirements.txt
docs/doxygen/: Doxyfile
docs/how-to/: use-cpp.rst  use-python.md  use-python.rst
docs/install/: install.rst
docs/reference/: index.rst  python_api.rst
docs/sphinx/: _toc.yml.in  requirements.in  requirements.txt
docs/tutorials/: c++_tutorials.rst  cpp_tutorials.rst  python_tutorials.rst
example/: rocm_smi_example.cc
include/rocm_smi/: kfd_ioctl.h  rocm_smi.h  rocm_smi_common.h  rocm_smi_counters.h  rocm_smi_device.h  rocm_smi_exception.h  rocm_smi_gpu_metrics.h  rocm_smi_io_link.h  rocm_smi_kfd.h  rocm_smi_logger.h  rocm_smi_main.h  rocm_smi_monitor.h  rocm_smi_power_mon.h  rocm_smi_properties.h  rocm_smi_utils.h
oam/: CMakeLists.txt
oam/example/: oam_example.c
oam/include/oam/: amd_oam.h  oam_mapi.h
oam/src/: amd_oam.cc
python_smi_tools/: README.md  build_manual.sh  rocmSmiLib_cli.py  rocm_smi.py  rsmiBindings.py  rsmiBindings.py.in  rsmiBindingsInit.py.in
rocm_smi/: CMakeLists.txt
rocm_smi/docs/: amd_smi_doxygen.cfg
rocm_smi/example/: rocm_smi_example.cc
src/: rocm_smi.cc  rocm_smi64Config.in  rocm_smi_counters.cc  rocm_smi_device.cc  rocm_smi_gpu_metrics.cc  rocm_smi_io_link.cc  rocm_smi_kfd.cc  rocm_smi_logger.cc  rocm_smi_main.cc  rocm_smi_monitor.cc  rocm_smi_power_mon.cc  rocm_smi_properties.cc  rocm_smi_utils.cc
src/shared_mutex/: shared_mutex.c  shared_mutex.cc  shared_mutex.h
tests/rocm_smi_test/: CMakeLists.txt  main.cc  rsmitst.exclude  run_build.sh  test_base.cc  test_base.h  test_common.cc  test_common.h  test_utils.cc  test_utils.h
tests/rocm_smi_test/functional/: api_support_read.cc  api_support_read.h  bdfid_read.cc  bdfid_read.h  computepartition_read_write.cc  computepartition_read_write.h  err_cnt_read.cc  err_cnt_read.h  evt_notif_read_write.cc  evt_notif_read_write.h  fan_read.cc  fan_read.h  fan_read_write.cc  fan_read_write.h  frequencies_read.cc  frequencies_read.h  frequencies_read_write.cc  frequencies_read_write.h  gpu_busy_read.cc  gpu_busy_read.h  gpu_metrics_read.cc  gpu_metrics_read.h  hw_topology_read.cc  hw_topology_read.h  id_info_read.cc  id_info_read.h  init_shutdown_refcount.cc  init_shutdown_refcount.h  measure_api_execution_time.cc  measure_api_execution_time.h  mem_page_info_read.cc  mem_page_info_read.h  mem_util_read.cc  mem_util_read.h  memorypartition_read_write.cc  memorypartition_read_write.h  metrics_counter_read.cc  metrics_counter_read.h  mutual_exclusion.cc  mutual_exclusion.h  (+40 more)
tests/rocm_smi_test/gtest/googletest/: CMakeLists.txt
tests/rocm_smi_test/gtest/googletest/cmake/: internal_utils.cmake
